--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "project-template",
-  "description": "",
-  "version": "0.0.1",
+  "name": "@plokkke/api-gateway-bridge",
+  "description": "API Gateway Bridge",
+  "version": "1.0.0",
   "author": "Antoine Caron <antoine@crn-tech.fr>",
   "license": "ISC",
   "scripts": {
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "build": "rimraf dist && tsc -p tsconfig.build.json && tsc-alias",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "validate": "npm run lint && npm run build && npm run test",
-    "test": "npm run test:unit && npm run test:mutation",
-    "test:cov": "npm run test:unit:cov",
-    "test:unit": "jest --config ./test/jest-unit.js",
+    "test": "npm run test:unit",
+    "test:cov": "npm run test:unit:cov && npm run test:mut",
+    "test:unit": "jest --passWithNoTests --config ./test/jest-unit.js",
     "test:unit:cov": "npm run test:unit -- --coverage",
-    "test:mutation": "stryker run"
+    "test:mut": "stryker run",
+    "validate": "npm run lint && npm run build && npm run test:cov",
+    "prepublishOnly": "npm run validate"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "luxon": "^3.6.0",
+    "openid-client": "^5.7.1",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
@@ -40,9 +41,11 @@
     "eslint-plugin-prettier": "^5.2.5",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "rimraf": "^5.0.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   }
