chore: prepare package for npm publication
- Update package version to 1.0.1
- Add package.json metadata for npm publication
- Configure .npmignore to exclude unnecessary files
- Set package as public for npm registry

--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
+  "private": false,
   "name": "@plokkke/api-gateway-bridge",
   "description": "API Gateway Bridge",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Antoine Caron <antoine@crn-tech.fr>",
   "license": "ISC",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/plokkke/api-gateway-bridge"
+  },
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json && tsc-alias",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
