--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,9 +22,13 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
 
     - name: Run validation
       run: npm run validate
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
 
     - name: Publish to npm
       run: npm publish --access public
