--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -19,6 +19,10 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
 
     - name: Run validation
       run: npm run validate
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
